test/errors/type/collections/set/__bor3.yasl
echo collections.set().__bor(1, true)
